--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
         </header>
         <nav id="menuBar" class="menuBar">
             <span class="close" onclick="closeMenu()">&times;</span>
-            <a href="cover.html">Cover</a>
+            <a href="index.html">Cover</a>
             <a href="giovanni.html">Home</a>
             <a href="giovanniOne.html">About</a>
             <a href="giovanniTwo.html">Portfolio</a>
@@ -49,4 +49,5 @@
     </section>
     <script src="contact.js"></script>
 </body>
+
 </html>
