--- a/giovanni.html
+++ b/giovanni.html
@@ -20,7 +20,7 @@
         </header>
           <nav id="menuBar" class="menuBar">
             <span class="close" onclick="closeMenu()">&times;</span>
-            <a href="cover.html">Cover</a>
+            <a href="index.html">Cover</a>
             <a href="#">Home</a>
             <a href="giovanniOne.html">About</a>
             <a href="giovanniTwo.html">Portfolio</a>
@@ -63,4 +63,5 @@
     </section>
     <script src="giovanni.js"></script>
 </body>
+
 </html>
