--- a/giovanniOne.html
+++ b/giovanniOne.html
@@ -19,7 +19,7 @@
         </header>
          <nav id="menuBar" class="menuBar">
             <span class="close" onclick="closeMenu()">&times;</span>
-            <a href="cover.html">Cover</a>
+            <a href="index.html">Cover</a>
             <a href="giovanni.html">Home</a>
             <a href="#">About</a>
             <a href="giovanniTwo.html">Portfolio</a>
@@ -51,4 +51,5 @@
     </section>
     <script src="giovanniOne.js"></script>
 </body>
+
 </html>
