--- a/giovanniTwo.html
+++ b/giovanniTwo.html
@@ -20,7 +20,7 @@
         </header>
         <nav id="menuBar" class="menuBar">
             <span class="close" onclick="closeMenu()">&times;</span>
-            <a href="cover.html">Cover</a>
+            <a href="index.html">Cover</a>
             <a href="giovanni.html">Home</a>
             <a href="giovanniOne.html">About</a>
             <a href="#">Portfolio</a>
@@ -64,3 +64,4 @@
 </body>
 
 </html>
+
